# Triangles

./: CMakeLists.txt  README.md
include/: triangle.h
src/: main.cpp  triangles.cpp
tests/: CMakeLists.txt  unit_tests.cpp
tests/lib/: INFO.txt
